# SampleApps

./: .gitignore  README.md  doubanfilm.7z
AOS/Apps/Douyin/app/: CMakeLists.txt  build.gradle
AOS/Apps/Douyin/app/src/main/cpp/: FaceTrack.h
AOS/Apps/Douyin/app/src/main/java/com/zy/douyin2/: MainActivity.java
AOS/Apps/Douyin/app/src/main/java/com/zy/douyin2/rec/: KasaVideoRecorder.java
AOS/Apps/Douyin/app/src/main/java/com/zy/douyin2/video/: KasaVideoPlayer.java
AOS/Apps/Douyin/app/src/main/java/com/zy/douyin2/video/codec/: ISurface.java
AOS/Apps/Douyin/app/src/main/java/com/zy/douyin2/video/widget/: DYPlayGLSurfaceView.java
AOS/Apps/Douyin/app/src/main/java/com/zy/douyin2/widget/: RecordButton.java
AOS/Apps/Douyin/app/src/main/res/drawable/: normal_rb.xml  pressed_rb.xml  shape_rb.xml  slector_rb.xml
AOS/Apps/Douyin/app/src/main/res/raw/: beauty_frag.glsl  beauty_magicam_frag.glsl  bigeye_frag.frag  camera_vertex.vert
AOS/Apps/Douyin/app/src/main/res/values/: styles.xml
AOS/Douyin/: local.properties  readme.md
AOS/Framework/: readme.txt
AOS/JetNotebook/: local.properties  settings.gradle
AOS/ResourcePaser/: settings.gradle
AOS/Sunflower/: local.properties
AOS/ZyResourceParser/: settings.gradle
CPP/CarRecgnize/: readme.txt
CarRecgnize/CarRecgnize/: CMakeLists.txt  CarColorPlateLocation.h  CarPlateLocation.h  CarPlateRecgnize.cpp  CarPlateRecgnize.h  CarRecgnize.cpp  CarSobelPlateLocation.cpp
Douyin/: buglist.md
JetNotebook/: api_android.md  readme.md  sunflower_build.gradle
Sunflower/: build.gradle  settings.gradle
(+470 files in other folders)
